[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "okline"
version = "2.8.0"
description = "LinePassport web application and OkLine Python SDK for managing LINE Chrome sessions, messaging, scheduling, and automation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LinePassport contributors" }]
keywords = [
    "line", "line-api", "line-bot", "line-messaging", "line-messaging-api",
    "line-chrome", "line-client", "line-sdk", "python-line", "unofficial-line",
    "messaging", "chat", "chatbot", "automation", "reverse-engineering",
    "chrome-extension", "thrift", "x-hmac", "okline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.32.2",
    "cryptography>=41.0",
]

[project.optional-dependencies]
qr = ["qrcode>=7.0"]
# Optional PostgreSQL persistence for LinePassport (`okline web`). Without it,
# the web UI falls back to on-disk JSON state (and prints an install hint).
web = ["psycopg[binary]>=3.1"]
test = ["pytest>=7.0"]
dev = [
    "pytest>=7.0",
    "ruff==0.15.21",
    "mypy==2.3.0",
    "types-requests",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/TheBoy/LinePassport"
Documentation = "https://github.com/TheBoy/LinePassport/tree/main/docs"
Repository = "https://github.com/TheBoy/LinePassport"
Issues = "https://github.com/TheBoy/LinePassport/issues"
Changelog = "https://github.com/TheBoy/LinePassport/blob/main/CHANGELOG.md"

[project.scripts]
okline = "okline.__main__:main"

[tool.setuptools.packages.find]
include = ["okline*"]

[tool.setuptools.package-data]
okline = ["py.typed", "ltsm/ltsm.wasm", "ltsm/ltsmSandbox.js", "ltsm/ltsm_bridge.js"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 95
target-version = "py39"
extend-exclude = ["okline/ltsm"]

[tool.ruff.lint]
# pyflakes(F), pycodestyle(E/W), isort(I), pyupgrade(UP), bugbear(B),
# comprehensions(C4), pep8-naming(N), simplify(SIM), ruff(RUF)
select = ["F", "E", "W", "I", "UP", "B", "C4", "N", "SIM", "RUF"]
ignore = [
    "E501",    # line length is enforced by the formatter
    "B008",    # function calls in argument defaults (intentional, e.g. int(Enum))
    "SIM105",  # try/except/pass is clearer than contextlib.suppress here
    "SIM102",  # nested ifs are sometimes clearer than a combined condition
    "RUF001", "RUF002", "RUF003",  # ambiguous unicode (Thai text in docs/strings)
    "N818",    # exception names: our public API is Line*Error, not *Exception
    # camelCase that deliberately mirrors LINE's wire field names / short aliases:
    "N815",    # e.g. sessionKey, reqSeq (match the Thrift struct fields)
    "N812", "N814", "N806",  # qrcode.constants as C, Message as _M, const-like locals
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "N802", "N806", "F841", "RUF012", "SIM115"]   # test ergonomics
"examples/*" = ["E402", "T201"]
"live_test.py" = ["E402", "T201"]
# the CLI is an argparse/dispatch builder where compact one-liners are intentional:
"okline/__main__.py" = ["E402", "E702"]
"okline/transport.py" = ["E402"]                 # imports after module-level setup

[tool.ruff.lint.isort]
known-first-party = ["okline"]

[tool.mypy]
python_version = "3.10"
files = ["okline"]
ignore_missing_imports = true        # requests/cryptography/qrcode stubs optional
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["okline/ltsm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
